Add trial methods and related documentation (Version 24.3.0)
This update introduces the trial methods in the GroupDocs.Rewriter API, along with the relevant documentation. Included are new files for DetectionTrialFileRequest - detailing its properties, FileApi - managing the functions to interact with the API endpoints, InfoApi - managing further functions to interact with different API endpoints, and test cases for both cloud-based APIs. Some additional methods for file upload are included as well. Each new file and changes were generated by the OpenAPI generator.
