# src/GroupDocs.Rewriter.Cloud.Sdk/Model/DetectionFileResponse.cs
@@ -34,21 +34,21 @@ namespace GroupDocs.Rewriter.Cloud.Sdk.Model
     {
 
         /// <summary>
-        /// Gets or Sets StatusCode
+        /// Gets or Sets Status
         /// </summary>
-        [DataMember(Name = "statusCode", EmitDefaultValue = false)]
-        public HttpStatusCode? StatusCode { get; set; }
+        [DataMember(Name = "status", EmitDefaultValue = false)]
+        public HttpStatusCode? Status { get; set; }
         /// <summary>
         /// Initializes a new instance of the <see cref="DetectionFileResponse" /> class.
         /// </summary>
-        /// <param name="statusCode">statusCode.</param>
+        /// <param name="status">status.</param>
         /// <param name="message">Information about process.</param>
         /// <param name="probability">The probability that the text turned out to be paraphrased.</param>
         /// <param name="isParaphrased">isParaphrased.</param>
         /// <param name="perParagraphProbability">perParagraphProbability.</param>
-        public DetectionFileResponse(HttpStatusCode? statusCode = default(HttpStatusCode?), string message = default(string), float probability = default(float), bool isParaphrased = default(bool), List<float> perParagraphProbability = default(List<float>))
+        public DetectionFileResponse(HttpStatusCode? status = default(HttpStatusCode?), string message = default(string), float probability = default(float), bool isParaphrased = default(bool), List<float> perParagraphProbability = default(List<float>))
         {
-            this.StatusCode = statusCode;
+            this.Status = status;
             this.Message = message;
             this.Probability = probability;
             this.IsParaphrased = isParaphrased;
@@ -89,7 +89,7 @@ namespace GroupDocs.Rewriter.Cloud.Sdk.Model
         {
             StringBuilder sb = new StringBuilder();
             sb.Append("class DetectionFileResponse {\n");
-            sb.Append("  StatusCode: ").Append(StatusCode).Append("\n");
+            sb.Append("  Status: ").Append(Status).Append("\n");
             sb.Append("  Message: ").Append(Message).Append("\n");
             sb.Append("  Probability: ").Append(Probability).Append("\n");
             sb.Append("  IsParaphrased: ").Append(IsParaphrased).Append("\n");
@@ -130,8 +130,8 @@ namespace GroupDocs.Rewriter.Cloud.Sdk.Model
             }
             return 
                 (
-                    this.StatusCode == input.StatusCode ||
-                    this.StatusCode.Equals(input.StatusCode)
+                    this.Status == input.Status ||
+                    this.Status.Equals(input.Status)
                 ) && 
                 (
                     this.Message == input.Message ||
@@ -163,7 +163,7 @@ namespace GroupDocs.Rewriter.Cloud.Sdk.Model
             unchecked // Overflow is fine, just wrap
             {
                 int hashCode = 41;
-                hashCode = (hashCode * 59) + this.StatusCode.GetHashCode();
+                hashCode = (hashCode * 59) + this.Status.GetHashCode();
                 if (this.Message != null)
                 {
                     hashCode = (hashCode * 59) + this.Message.GetHashCode();
