# src/GroupDocs.Rewriter.Cloud.Sdk/Model/SummarizationTextResponse.cs
@@ -34,20 +34,20 @@ namespace GroupDocs.Rewriter.Cloud.Sdk.Model
     {
 
         /// <summary>
-        /// Gets or Sets StatusCode
+        /// Gets or Sets Status
         /// </summary>
-        [DataMember(Name = "statusCode", EmitDefaultValue = false)]
-        public HttpStatusCode? StatusCode { get; set; }
+        [DataMember(Name = "status", EmitDefaultValue = false)]
+        public HttpStatusCode? Status { get; set; }
         /// <summary>
         /// Initializes a new instance of the <see cref="SummarizationTextResponse" /> class.
         /// </summary>
-        /// <param name="statusCode">statusCode.</param>
+        /// <param name="status">status.</param>
         /// <param name="message">Information about process.</param>
         /// <param name="summarizationResult">summarizationResult.</param>
         /// <param name="summarizationResults">summarizationResults.</param>
-        public SummarizationTextResponse(HttpStatusCode? statusCode = default(HttpStatusCode?), string message = default(string), string summarizationResult = default(string), List<string> summarizationResults = default(List<string>))
+        public SummarizationTextResponse(HttpStatusCode? status = default(HttpStatusCode?), string message = default(string), string summarizationResult = default(string), List<string> summarizationResults = default(List<string>))
         {
-            this.StatusCode = statusCode;
+            this.Status = status;
             this.Message = message;
             this.SummarizationResult = summarizationResult;
             this.SummarizationResults = summarizationResults;
@@ -80,7 +80,7 @@ namespace GroupDocs.Rewriter.Cloud.Sdk.Model
         {
             StringBuilder sb = new StringBuilder();
             sb.Append("class SummarizationTextResponse {\n");
-            sb.Append("  StatusCode: ").Append(StatusCode).Append("\n");
+            sb.Append("  Status: ").Append(Status).Append("\n");
             sb.Append("  Message: ").Append(Message).Append("\n");
             sb.Append("  SummarizationResult: ").Append(SummarizationResult).Append("\n");
             sb.Append("  SummarizationResults: ").Append(SummarizationResults).Append("\n");
@@ -120,8 +120,8 @@ namespace GroupDocs.Rewriter.Cloud.Sdk.Model
             }
             return 
                 (
-                    this.StatusCode == input.StatusCode ||
-                    this.StatusCode.Equals(input.StatusCode)
+                    this.Status == input.Status ||
+                    this.Status.Equals(input.Status)
                 ) && 
                 (
                     this.Message == input.Message ||
@@ -150,7 +150,7 @@ namespace GroupDocs.Rewriter.Cloud.Sdk.Model
             unchecked // Overflow is fine, just wrap
             {
                 int hashCode = 41;
-                hashCode = (hashCode * 59) + this.StatusCode.GetHashCode();
+                hashCode = (hashCode * 59) + this.Status.GetHashCode();
                 if (this.Message != null)
                 {
                     hashCode = (hashCode * 59) + this.Message.GetHashCode();
